--- a/Config/Mini.conf
+++ b/Config/Mini.conf
@@ -15,26 +15,28 @@ allow-wifi-access = false
 🌏 Direct = direct
 
 [Proxy Group]
-Booster = select, HK, Singapore, US, Taiwan, Japan, 🚴🏼‍♂️Sanxin, 🚴🏻Fish, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0
+Booster = select, HK, Singapore, US, Taiwan, Japan, 🚴🏼‍♂️Nexitally, 🚴🏻amy, no-alert=0, hidden=0, include-all-proxies=0, update-interval=0
 FINAL = select, HK, US, Japan, Singapore, Booster, 🌏 Direct, no-alert=0, hidden=0, include-all-proxies=0
-Ai = select, Singapore, US, no-alert=0, hidden=0, include-all-proxies=0
+Ai = select, Singapore, US, 🚴🏼‍♂️Nexitally, no-alert=0, hidden=0, include-all-proxies=0
 Telegram = select, Booster, US, HK, no-alert=0, hidden=0, include-all-proxies=0
 Spotify = select, US, Singapore, Booster, 🌏 Direct, no-alert=0, hidden=0, include-all-proxies=0
 Netflix = select, HK, Singapore, US, Booster, Taiwan, Japan, no-alert=0, hidden=0, include-all-proxies=0
 Stream TV = select, Booster, Singapore, Taiwan, US, Japan, no-alert=0, hidden=0, include-all-proxies=0
-韩国TV = select, Booster, Singapore, Taiwan, US, Japan, no-alert=0, hidden=0, include-all-proxies=0
+Mail = select, 🌏 Direct, mail node, Booster
 Mircosoft = select, 🌏 Direct, Booster, Japan, US, no-alert=0, hidden=0, include-all-proxies=0
 Apple = select, 🌏 Direct, Singapore, US, Booster, no-alert=0, hidden=0, include-all-proxies=0
 Cloud = select, 🌏 Direct, Booster
 Guard = select, REJECT, DIRECT, REJECT-TINYGIF
 # > Nodes List
-HK = fallback, update-interval=0, policy-regex-filter=🇭🇰, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Fish
-Singapore = fallback, update-interval=0, policy-regex-filter=🇸🇬, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Fish
-Japan = fallback, update-interval=0, policy-regex-filter=🇯🇵, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Fish
-US = fallback, update-interval=0, policy-regex-filter=🇺🇸, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Fish
-Taiwan = fallback, update-interval=0, policy-regex-filter=Taiwan|台湾, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Fish
-🚴🏼‍♂️Sanxin = select, policy-path=https://sub.store/download/xianyuyang, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
-🚴🏻Fish = select, policy-path=https://sub.store/download/%E5%92%B8%E9%B1%BC%E4%B8%89%E6%98%9F, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
+mail node = fallback, update-interval=0, no-alert=0, hidden=1, include-all-proxies=0, policy-regex-filter=Hong Kong 05|原生, include-other-group=🚴🏼‍♂️Nexitally
+HK = fallback, update-interval=0, policy-regex-filter=🇭🇰, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Nexitally
+Singapore = fallback, update-interval=0, policy-regex-filter=🇸🇬, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Nexitally
+Japan = fallback, update-interval=0, policy-regex-filter=🇯🇵, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Nexitally
+US = fallback, update-interval=0, policy-regex-filter=🇺🇸, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Nexitally
+Taiwan = fallback, update-interval=0, policy-regex-filter=Taiwan|台湾, no-alert=0, hidden=1, include-all-proxies=0, include-other-group=🚴🏼‍♂️Nexitally
+🚴🏼‍♂️Nexitally = select, policy-path=订阅地址, update-interval=86400, no-alert=0, hidden=0, include-all-proxies=0
+🚴🏻amy = select, policy-path=订阅地址, update-interval=604800
+🚴🏻Fish = select, policy-path=订阅地址, update-interval=0, no-alert=0, hidden=0, include-all-proxies=0
 
 [Rule]
 DOMAIN-SUFFIX,vercel.app,Booster // Added for: https://sub-store.vercel.app/subs
@@ -54,7 +56,6 @@ RULE-SET,https://raw.githubusercontent.com/teaslink/Surge/main/netflix.list,Netf
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Disney/Disney.list,Stream TV
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia.list,Stream TV
 DOMAIN-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/GlobalMedia/GlobalMedia_Domain.list,Stream TV
-RULE-SET,https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/master/Clash/ProxyGFWlist.list,韩国TV
 RULE-SET,https://raw.githubusercontent.com/teaslink/Surge/main/onedrive.list,Cloud
 RULE-SET,https://raw.githubusercontent.com/Loyalsoldier/surge-rules/release/ruleset/icloud.txt,Cloud
 RULE-SET,https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/master/rule/Surge/Microsoft/Microsoft.list,Mircosoft
