--- a/config/Mini.conf
+++ b/config/Mini.conf
@@ -23,7 +23,7 @@ Booster = select, HK, Singapore, US, Taiwan, Japan, ⛺️ Nexitally, ⛺️ amy
 Netflix = select, HK, Singapore, US, Booster, Taiwan, Japan
 Twitter = select, HK, Singapore, US, Booster, Taiwan, Japan
 Telegram = select, Booster, US, HK
-Ai = select, Singapore, US, ⛺️ Nexitally
+Ai = select, Singapore, US, Taiwan
 Mail = select, 🌏 Direct, mail node, Booster
 Apple = select, 🌏 Direct, Booster
 Guard = select, REJECT, DIRECT
