--- a/Shadowrocket/lazy_group.conf
+++ b/Shadowrocket/lazy_group.conf
@@ -1,4 +1,4 @@
-# 懒人配置（含策略组）
+# 懒人配置（含策略组） site: https://github.com/wlxuf/Shadowrocket
 # 更新时间：2024-01-20
 # Shadowrocket添加配置方法：配置 - 右上角➕ - 粘贴配置链接 - 下载 - 点击对应的配置文件 - 使用配置。
 [General]
