Update and rename direct.list to direct.conf

--- a/rules/direct.conf
+++ b/rules/direct.conf
@@ -1,17 +1,66 @@
-#########################################
-# Sukka's Ruleset - Direct Rules
-# Last Updated: 2024-04-03T16:26:20.357Z
-# Size: 166
-# License: AGPL 3.0
-# Homepage: https://ruleset.skk.moe
-# GitHub: https://github.com/SukkaW/Surge
-#
-# This file contains domains and process that should not be proxied.
-#########################################
-DOMAIN,this_ruleset_is_made_by_sukkaw.ruleset.skk.moe
+# --- CUSTOM RULES ---
+DOMAIN-SUFFIX,ypftrh.xyz
+DOMAIN-SUFFIX,ap.spotify.com
+  
+# >> AdGuard
 DOMAIN,injections.adguard.org
 DOMAIN,local.adguard.org
+
+# >> Proxy
+PROCESS-NAME,v2ray
+PROCESS-NAME,xray
+PROCESS-NAME,ss-local
+PROCESS-NAME,clash
+PROCESS-NAME,ClashX
+PROCESS-NAME,trojan
+PROCESS-NAME,trojan-go
+PROCESS-NAME,privoxy
+
+# >> Cloudflare Tunnel
+PROCESS-NAME,cloudflared
+
+# >> Downloader
+PROCESS-NAME,aria2c
+PROCESS-NAME,fdm
+PROCESS-NAME,Folx
+PROCESS-NAME,NetTransport
+PROCESS-NAME,Thunder
+PROCESS-NAME,ThunderVIP
+PROCESS-NAME,Transmission
+PROCESS-NAME,transmission-daemon
+PROCESS-NAME,transmission-qt
+PROCESS-NAME,BitComet
+PROCESS-NAME,uTorrent
+PROCESS-NAME,qbittorrent*
+PROCESS-NAME,DownloadService
+PROCESS-NAME,qBittorrent
+PROCESS-NAME,qbittorrent-nox
+PROCESS-NAME,WebTorrent
+PROCESS-NAME,WebTorrent Helper
+PROCESS-NAME,amuled
+PROCESS-NAME,Motrix.app
+
+# > UUBooster
+PROCESS-NAME,UUBooster
+
+# > Xunlei
+USER-AGENT,%E8%BF%85%E9%9B%B7
 DOMAIN-SUFFIX,xunlei.com
+
+# tailscale
+PROCESS-NAME,tailscaled
+# Parsec
+PROCESS-NAME,parsecd
+# 向日葵远程
+PROCESS-NAME,SunloginClient_Desktop
+PROCESS-NAME,SunloginClient_Helper
+# 百度网盘
+PROCESS-NAME,BaiduNetdisk_mac
+# 罗技Options
+PROCESS-NAME,Logi Options
+PROCESS-NAME,Logi Options Daemon
+
+# >> PT
 DOMAIN-SUFFIX,52pt.site
 DOMAIN-SUFFIX,acg.rip
 DOMAIN-SUFFIX,animebytes.tv
@@ -111,7 +160,23 @@ DOMAIN-SUFFIX,totheglory.im
 DOMAIN-SUFFIX,trontv.com
 DOMAIN-SUFFIX,u2.dmhy.org
 DOMAIN-SUFFIX,uhdbits.org
+
+# >> Academic
+
+# 中国知网
+DOMAIN-KEYWORD,cnki.net
+
+# 万方
+DOMAIN-KEYWORD,wanfangdata
+
+# 法律数据库
+DOMAIN-KEYWORD,pkulaw
+DOMAIN-KEYWORD,westlawchina
+
+# 查找 DOI
 DOMAIN-SUFFIX,doi.org
+
+# SCI 综合
 DOMAIN-SUFFIX,researchgate.net
 DOMAIN-SUFFIX,springer.com
 DOMAIN-SUFFIX,blackwell-synergy.com
@@ -122,56 +187,26 @@ DOMAIN-SUFFIX,ieee.org
 DOMAIN-SUFFIX,nature.com
 DOMAIN-SUFFIX,sciencemag.org
 DOMAIN-SUFFIX,osapublishing.org
+
+## Willey 旗下
 DOMAIN-SUFFIX,wiley.com
-DOMAIN-SUFFIX,scopus.com
-DOMAIN-SUFFIX,oup.com
-DOMAIN-SUFFIX,springernature.com
-DOMAIN-SUFFIX,acm.org
-DOMAIN-SUFFIX,jstor.org
-DOMAIN-KEYWORD,cnki.net
-DOMAIN-KEYWORD,wanfangdata
-DOMAIN-KEYWORD,pkulaw
-DOMAIN-KEYWORD,westlawchina
 DOMAIN-KEYWORD,readcube
+
+## Elsevier 旗下
+DOMAIN-SUFFIX,scopus.com
 DOMAIN-KEYWORD,sciencedirect
 DOMAIN-KEYWORD,elsevier
 DOMAIN-KEYWORD,deepdyve
 DOMAIN-KEYWORD,els-cdn
-USER-AGENT,%E8%BF%85%E9%9B%B7
-PROCESS-NAME,v2ray
-PROCESS-NAME,xray
-PROCESS-NAME,ss-local
-PROCESS-NAME,clash
-PROCESS-NAME,ClashX
-PROCESS-NAME,trojan
-PROCESS-NAME,trojan-go
-PROCESS-NAME,privoxy
-PROCESS-NAME,cloudflared
-PROCESS-NAME,aria2c
-PROCESS-NAME,fdm
-PROCESS-NAME,Folx
-PROCESS-NAME,NetTransport
-PROCESS-NAME,Thunder
-PROCESS-NAME,ThunderVIP
-PROCESS-NAME,Transmission
-PROCESS-NAME,transmission-daemon
-PROCESS-NAME,transmission-qt
-PROCESS-NAME,BitComet
-PROCESS-NAME,uTorrent
-PROCESS-NAME,qbittorrent*
-PROCESS-NAME,DownloadService
-PROCESS-NAME,qBittorrent
-PROCESS-NAME,qbittorrent-nox
-PROCESS-NAME,WebTorrent
-PROCESS-NAME,WebTorrent Helper
-PROCESS-NAME,amuled
-PROCESS-NAME,Motrix.app
-PROCESS-NAME,UUBooster
-PROCESS-NAME,tailscaled
-PROCESS-NAME,parsecd
-PROCESS-NAME,SunloginClient_Desktop
-PROCESS-NAME,SunloginClient_Helper
-PROCESS-NAME,BaiduNetdisk_mac
-PROCESS-NAME,Logi Options
-PROCESS-NAME,Logi Options Daemon
-################## EOF ##################
+
+## Oxford 出版系列
+DOMAIN-SUFFIX,oup.com
+
+## Springer 旗下
+DOMAIN-SUFFIX,springernature.com
+
+# ACM (Association for Computing Machinery)
+DOMAIN-SUFFIX,acm.org
+
+## JSTOR 旗下
+DOMAIN-SUFFIX,jstor.org
